[gd_scene load_steps=16 format=2]

[ext_resource path="res://GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audio/Gameover.wav" type="AudioStream" id=3]
[ext_resource path="res://ObjectArt/Man1Sheet.tres" type="SpriteFrames" id=4]
[ext_resource path="res://ObjectArt/PinkSheet.tres" type="SpriteFrames" id=5]
[ext_resource path="res://ObjectArt/GrandmaSheet.tres" type="SpriteFrames" id=6]
[ext_resource path="res://ObjectArt/Woman1Sheet.tres" type="SpriteFrames" id=7]
[ext_resource path="res://ObjectArt/Player.tres" type="SpriteFrames" id=8]
[ext_resource path="res://ObjectArt/ButtonTheme.tres" type="Theme" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.168627, 0.266667, 1 )
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color( 0.227451, 0.266667, 0.4, 1 )
shadow_size = 30

[sub_resource type="DynamicFont" id=6]
size = 120
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 43
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 19
extra_spacing_bottom = -6
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Label/fonts/font = SubResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 73
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 575.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 934.0
margin_bottom = 510.0
custom_constants/separation = 80

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 894.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 6 )
text = "GAME OVER"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 894.0
margin_bottom = 328.0
theme = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 353.0
margin_right = 540.0
margin_bottom = 128.0
custom_constants/separation = 40

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 44.0
focus_neighbour_right = NodePath("../../../../../../VBoxContainer/Container/TextEdit")
focus_neighbour_bottom = NodePath("../Quit")
custom_fonts/font = SubResource( 7 )
text = "  RESTART  "

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 187.0
margin_bottom = 128.0
focus_neighbour_top = NodePath("../Restart")
custom_fonts/font = SubResource( 7 )
text = "  QUIT  "

[node name="Score_Board" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_top = 33.0
margin_right = 270.0
margin_bottom = 530.0
theme = SubResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.743
anchor_right = 0.535
anchor_bottom = 0.743
margin_left = -327.0
margin_right = 297.0
alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 255.0
margin_right = 255.0
margin_bottom = 74.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/Panel"]
position = Vector2( -32, 32 )
scale = Vector2( 4, 4 )
frames = ExtResource( 8 )
animation = "dash_right"
playing = true

[node name="Score_Display" type="Label" parent="HBoxContainer"]
margin_left = 259.0
margin_right = 404.0
margin_bottom = 74.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "SCORE"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 677.0
margin_top = 242.0
margin_right = 933.0
margin_bottom = 334.0
theme = ExtResource( 9 )

[node name="Label" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 256.0
margin_bottom = 34.0
text = "ENTER YOUR NAME:"
align = 1
valign = 1

[node name="Container" type="Container" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 30.0
rect_min_size = Vector2( 1.195, 30 )

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/Container"]
visible = false
margin_top = -4.0
margin_right = 256.0
margin_bottom = -4.0
rect_min_size = Vector2( 100, 30 )
focus_neighbour_left = NodePath("../../../PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Restart")

[node name="Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 34.0
margin_right = 256.0
margin_bottom = 90.0
text = "Save Score!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 169, 534 )
scale = Vector2( 4, 4 )
frames = ExtResource( 6 )
animation = "argue_left"
frame = 1
playing = true
offset = Vector2( -5.75, -7.25 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 906, 534 )
scale = Vector2( 4, 4 )
frames = ExtResource( 4 )
animation = "argue_right"
playing = true
offset = Vector2( -5.75, -7.25 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 970, 533 )
scale = Vector2( 4, 4 )
frames = ExtResource( 5 )
animation = "argue_left"
playing = true
offset = Vector2( -5.75, -7.25 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 104, 534 )
scale = Vector2( 4, 4 )
frames = ExtResource( 7 )
animation = "argue_right"
frame = 1
playing = true
offset = Vector2( -5.75, -7.25 )

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="ready" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_ready"]
[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_Button_button_down"]
